# mentat

./: .gitignore  AGENTS.md  CONTEXT.md  CREDITS.md  README.md  STYLE.md  Taskfile.yml  conftest.py  install.sh  lefthook.yml  package.json  pyproject.toml  pyrightconfig.json  upstreams.jsonc  upstreams.lock.jsonc  vendir.lock.yml  vendir.yml
.agents/: .mentat.jsonc  .mentat.jsonc.example  AGENTS.md
.agents/agents/: crew-research.md  crew-review-bugs.md  crew-review-plan.md  crew-review-tests.md  mentat-bug-reviewer.md  mentat-context-reviewer.md  mentat-plan-reviewer.md  mentat-researcher.md  mentat-rules-reviewer.md  mentat-smell-reviewer.md  mentat-test-reviewer.md
.agents/commands/: mentat-commit.md  mentat-container-down.md  mentat-container-up.md  mentat-diagnose.md  mentat-diff.md  mentat-doctor.md  mentat-eval.md  mentat-handoff.md  mentat-implement.md  mentat-orchestrate.md  mentat-plan.md  mentat-rebase.md  mentat-scaffold.md  mentat-shrink.md  mentat-track.md  to-commit.md  to-diagnose.md  to-implement.md
.agents/docs/: CONTEXT.md  PATHS.md  container-state-design.md  dmux-architecture.md  harness-matrix.md  mentat-architecture.md
.agents/lib/: agent.py  audit_schema.py  chunk.py  chunk_service.py  config.py  devcontainer.py  events.py  exits.py  frontmatter.py  git.py  harness_stream.py  jsonc.py  loader.py  paths.py  plan_slices.py  plans.py  session.py  state.py  store.py  tui.py  worktrees.py
.agents/rules/: architecture.md  code-organization.md  database.md  naming.md  python.md  testing.md
.agents/skills/: README.md
.devcontainer/: Dockerfile  compose.yml.tmpl  devcontainer.json
context/: mechanics-verified.md
docs/: ARCHITECTURE.md  EXIT-CODES.md  INSTALLER.md  PLUGINS.md  STYLE.md
docs/adr/: 0001-sub-agent-delegation.md  0002-holding-branch-over-merge.md  0003-scored-review-gate.md  0004-parallel-orchestration.md  0005-ubiquitous-lexicon.md  0006-soft-readonly-test-enforcement.md  0007-audit-envelope.md  0008-python-runtime.md  0009-plugin-api.md  0010-readonly-test-mount.md  0011-compose-aware-container.md  0012-code-rules-layer.md  0013-session-continuity-over-compaction.md  0014-coverage-gate.md  0015-auto-recovery.md  0016-mutation-signal.md  0017-per-run-isolation.md  0018-skill-modularization.md  0019-code-organization.md  0020-test-craft.md  README.md
docs/assets/: demo.cast
docs/explanation/: what-is-mentat.md  why-mentat.md
docs/how-to/: doctor.md  hitl-handoff.md  installation.md  orchestrate-with-tracking.md  plan-implement-and-orchestrate.md  plan-then-implement.md  plan-then-orchestrate.md  tracking-a-run.md
docs/tutorials/: getting-started.md
docs/wiki/: Home.md  README.md  _Sidebar.md
evals/: mentat-container.json  mentat-git.json  mentat-implement.json  mentat-install.json  mentat-log.json  mentat-orchestrate.json  mentat-plan.json  mentat-session.json  mentat-skill.json  mentat-track.json
evals/promptfoo/: promptfooconfig-autosplit.yaml  promptfooconfig.yaml
evals/pytest/: conftest.py  test_blacklist.py  test_container_hardening.py  test_design_drift.py  test_g1_s10_eject_resume.py  test_g1_s11_resume_md.py  test_g1_s12_adr_envelope.py  test_g1_s2_audit_validator.py  test_g1_s3_audit_schema_jsonc.py  test_g1_s4_final_review_typed_emit.py  test_g1_s6_fan_out.py  test_g1_s7_land_queue.py  test_g1_s8_final_review.py  test_g1_s9_thin_driver.py  test_g2_s1_container_state_design.py  test_g2_s2_container_state_impl.py  test_g2_s3_container_up_delegates.py  test_g2_s4_container_run_asserts_invariants.py  test_g2_s5_container_down_delegates.py  test_g2_s6_container_doctor_delegates.py  test_g2_s8_compose_synth_pure.py  test_g2_s9_resolve_workspace_folder.py  test_g3_s10_adr_hitl_xrefs.py  test_g3_s1_harness_registry_design.py  test_g3_s2_harness_registry_rows.py  test_g3_s3_hitl_contract.py  test_g3_s4_claude_code_afk.py  test_g3_s5_claude_code_hitl.py  test_g3_s6_cursor_afk.py  test_g3_s7_mentat_implement_afk_ref.py  test_g3_s8_land_queue_hitl_mapping.py  test_g3_s9_doctor_hitl_verdict.py  test_harness_scaffold.py  test_integration_wiring.py  test_mentat_diff_hook.py  test_non_pytest_gate.py  test_p1_hygiene.py  test_p2_rename.py  test_p3_config.py  test_p3_observability.py  (+10 more)
mentat/: installer.py
tasks/: coverage.py  docs_sync.py  embed_docs.py  health.py  mark_skip.py  mutation.py  release.py
tests/: conftest.py  test_adr_0015.py  test_afk_agent_capture.py  test_afk_session_capture.py  test_agent.py  test_agent_list.py  test_agent_mint.py  test_agent_seam.py  test_agent_track.py  test_agents.py  test_autorecover_guards.py  test_batch.py  test_batch_review.py  test_chunk.py  test_chunk_lifecycle.py  test_claim.py  test_cli_conformance.py  test_compose_sidecar.py  test_config.py  test_container.py  test_container_overlay.py  test_container_runtime.py  test_container_synth.py  test_coordinator.py  test_coverage_runner.py  test_create.py  test_cross_partition_dep_ordering.py  test_detect_self_answer_streamjson.py  test_dev_deps.py  test_devcontainer.py  test_diagnose.py  test_drop_routing_shim.py  test_ejected_payload.py  test_emit_event_surface.py  test_engine.py  test_eval_test_roi.py  test_events.py  test_executor_afk_resilience.py  test_exit_constants.py  test_f3_plugin_diff_drop.py  (+123 more)
tests/e2e/: conftest.py  test_agent_cli_journey.py  test_agent_lib_journey.py  test_agent_report_journey.py  test_agents_registry_journey.py  test_backoff_journey.py  test_code_gates_journey.py  test_compose_render_journey.py  test_config_journey.py  test_container_cli_journey.py  test_devcontainer_journey.py  test_doctor_gaps_journey.py  test_doctor_journey.py  test_events_journey.py  test_fan_out_journey.py  test_frontmatter_journey.py  test_git_journey.py  test_git_worktree_journey.py  test_harness_stream_journey.py  (+47 more)
(+260 files in other folders)
