[build-system]
requires = []

[tool.uv]
package = false

[project]
name = "mentat"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright",
    "ruff",
    "pydantic",
    "pyyaml",
    "lefthook",
    "coverage>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = []
markers = [
    "e2e: real-subprocess / real-git end-to-end test (run the fast suite with `-m \"not e2e\"`)",
]

[tool.coverage.run]
branch = true
source = [".agents/lib", ".agents/skills", "tasks"]

[tool.coverage.report]
show_missing = true
# Baseline floor — green today. The mentat-hardening-ratchet plan raises this to
# 100 once every module's backfill has landed.
fail_under = 82
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # sys.path bootstrap idiom in the stdlib-only script layer — the not-in-path
    # branch never runs once another script has already inserted the root.
    "if str\\(_AGENTS_ROOT\\) not in sys.path:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["tests", ".agents/skills", ".agents/lib", "tasks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
".agents/skills/*/scripts/*.py" = ["E402"]
"tests/*.py" = ["SIM117", "SIM105", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["tests", ".agents/skills/mentat-*/scripts", ".agents/lib", "tasks"]
exclude = ["docs/adr/archive", "tests/fixtures", "tests", "conftest.py"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
