[build-system]
requires = []

[tool.uv]
package = false

[project]
name = "mentat"
version = "0.1.0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright",
    "ruff",
    "pydantic",
    "pyyaml",
    "lefthook",
    "coverage>=7",
    "mutmut>=3",
]

# Mutation testing (ADR-0016) — advisory, run via `task mutation`, never a gate.
# Test order is pinned (`-p no:randomly`) and per-mutant time is bounded so a run is
# reproducible; source_paths matches the coverage gate's shipped-runtime surface.
[tool.mutmut]
source_paths = [".agents/lib", ".agents/skills"]
pytest_add_cli_args = ["-p", "no:randomly", "-q"]
timeout_multiplier = 2.0
timeout_constant = 5.0

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = []
markers = [
    "e2e: real-subprocess / real-git end-to-end test (run the fast suite with `-m \"not e2e\"`)",
]

[tool.coverage.run]
branch = true
# Shipped runtime only. The `tasks/` dir is dev tooling (coverage runner, docs
# sync, release) — out of the shipped surface and its runner can't self-measure,
# so it stays out of the 100% gate. Its behavior is still tested (test_coverage_runner).
source = [".agents/lib", ".agents/skills"]

[tool.coverage.report]
show_missing = true
# No `fail_under` here on purpose: the unit gate (90%, ADR-0014) and the e2e journey
# gate each pass their own `--fail-under` via `task coverage`. A shared
# config default would collide with the per-pass override. Entrypoints and the
# sys.path bootstrap idiom are omit-listed below; everything else must be exercised.
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # sys.path bootstrap idiom in the stdlib-only script layer — the not-in-path
    # branch never runs once another script has already inserted the root.
    "if str\\(_AGENTS_ROOT\\) not in sys.path:",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["tests", ".agents/skills", ".agents/lib", "tasks"]
# Promptfoo eval fixtures are intentionally-bad sample code (padding, assertion-free
# tests) that the reviewer eval judges — not project source. Do not lint them.
# force-exclude honours the exclude even when the pre-commit hook passes the files
# as explicit paths (lefthook stages changed *.py), not just on a directory walk.
extend-exclude = ["evals/promptfoo/fixtures"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
".agents/skills/*/scripts/*.py" = ["E402"]
"tests/*.py" = ["SIM117", "SIM105", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["tests", ".agents/skills/mentat-*/scripts", ".agents/lib", "tasks"]
exclude = ["docs/adr/archive", "tests/fixtures", "tests", "conftest.py"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
